--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -28,57 +28,42 @@
   <!-- NAVBAR -->
   <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; bottom: #transparent-sticky-navbar">
    <nav class="uk-navbar-container" id="nav_bar" uk-navbar style="position: relative; z-index: 980;">
-        <div class="uk-navbar-left">
+       <div class="uk-navbar-left">
+         <div>
+           <!--IT Logo-->
+           <a href="http://www.it.kmitl.ac.th/" target="_blank" class="hvr-shrink">
+             <img src="it_kmitl.png" alt="itkmitl logo" style="float:left;" id="it_1ogo" size="20px 20px">
+           </a>
+         </div>
+         <div>
             <ul class="uk-navbar-nav">
-                <li><a href="#bg1" uk-icon="home" uk-scroll></a></li>
+                <li><a href="#bg1" uk-icon="home" uk-scroll class="under"></a></li>
             </ul>
+         </div>
         </div>
        <div class="uk-navbar-right">
            <ul class="uk-navbar-nav">
              <li>
-               <a>ABOUT</a>
+               <a class="under">ABOUT</a>
                <div class="uk-navbar-dropdown">
                  <ul class="uk-nav uk-navbar-dropdown-nav">
-                   <li><a href="#what_is" uk-scroll>WHAT IS SOFTWARE ENGINEERING</a></li>
+                   <li><a href="#what_is" uk-scroll class="under">WHAT IS SOFTWARE ENGINEERING</a></li>
                    <li class="uk-nav-divider"></li>
-                   <li><a href="#how_differ" uk-scroll>DIFFERENT</a></li>
+                   <li><a href="#how_differ" uk-scroll class="under">DIFFERENT</a></li>
                    <li class="uk-nav-divider"></li>
-                   <li><a href="#bg2" uk-scroll>ELIGIBLE</a></li>
+                   <li><a href="#bg2" uk-scroll class="under">ELIGIBLE</a></li>
                    <li class="uk-nav-divider"></li>
-                   <li><a href="#bg3" uk-scroll>TO DE / TO HAVE</a></li>
+                   <li><a href="#bg3" uk-scroll class="under">TO DE / TO HAVE</a></li>
                    <li class="uk-nav-divider"></li>
-                   <li><a href="#ex_of_career" uk-scroll>EXAMPLE CAREER</a></li>
+                   <li><a href="#ex_of_career" uk-scroll class="under">EXAMPLE CAREER</a></li>
                  </ul>
                </div>
              </li>
              <li>
-               <a href="#subject" uk-scroll>BRANCH SUBJECT</a>
-                 <!-- <div class="uk-navbar-dropdown">
-                   <ul class="uk-nav uk-navbar-dropdown-nav">
-                     <li><a href="#se" uk-scroll>SOFTWARE ENGINEERING</a></li>
-                     <li class="uk-nav-divider"></li>
-                     <li><a href="#wp" uk-scroll>WEB PROGRAMMING</a></li>
-                     <li class="uk-nav-divider"></li>
-                     <li><a href="#mdp" uk-scroll>MOBILE DEVICE PROGRAMMING</a></li>
-                     <li class="uk-nav-divider"></li>
-                     <li><a href="#re" uk-scroll>REQUIREMENT ENGINEERING</a></li>
-                     <li class="uk-nav-divider"></li>
-                     <li><a href="#sop" uk-scroll>SERVICE-ORIENTED PROGRAMMING</a></li>
-                     <li class="uk-nav-divider"></li>
-                     <li><a href="#svav" uk-scroll>SOFTWARE VERIFICATION AND VALIDATION</a></li>
-                     <li class="uk-nav-divider"></li>
-                     <li><a href="#cbead" uk-scroll>CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT</a></li>
-                     <li class="uk-nav-divider"></li>
-                     <li><a href="#sdtae" uk-scroll>SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS</a></li>
-                     <li class="uk-nav-divider"></li>
-                     <li><a href="#pro1" uk-scroll>PROJECT IN SOFTWARE ENGINEERING 1</a></li>
-                     <li class="uk-nav-divider"></li>
-                     <li><a href="#pro2" uk-scroll>PROJECT IN SOFTWARE ENGINEERING 2</a></li>
-                   </ul>
-               </div> -->
+               <a href="#subject" uk-scroll class="under">BRANCH SUBJECT</a>
              </li>
-             <li><a href="#subj_table" uk-scroll>SUBJECT TABLE</a></li>
-             <li><a href="#q_and_a" uk-scroll>Q&A</a></li>
+             <li><a href="#subj_table" uk-scroll class="under">SUBJECT TABLE</a></li>
+             <li><a href="#q_and_a" uk-scroll class="under">Q&A</a></li>
            </ul>
          </div>
     </nav>
