--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -188,6 +188,28 @@
     </div>
   </div>
   <br>
+	
+  <!--Job Statistic-->
+  <div class="uk-section uk-section-default">
+    <div class="uk-container">
+        <div class="uk-grid-match uk-child-width-1-3@m" uk-grid>
+            <div>
+                <h1 align="center">23%</h1>
+                <p align="center">System Analyst</p>
+            </div>
+            <div>
+                <h1 align="center">47%</h1>
+                <p align="center">Programmer</p>
+            </div>
+            <div>
+                <h1 align="center">30%</h1>
+                <p align="center">Web Developer</p>
+            </div>
+        </div>
+
+    </div>
+  </div>
+  <br>
 
   <!--Specific subjects in SE branch-->
   <div class="divide_div" style="padding-bottom: 50px;" id="subject">
