--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -45,7 +45,7 @@
                    <li class="uk-nav-divider"></li>
                    <li><a href="#bg2" uk-scroll>ELIGIBLE</a></li>
                    <li class="uk-nav-divider"></li>
-                   <li><a href="#bg3" uk-scroll>TO DE / TO HAVE</a></li>
+                   <li><a href="#bg3" uk-scroll>INTERESTED IN SOFTWARE ENGINEERING</a></li>
                    <li class="uk-nav-divider"></li>
                    <li><a href="#ex_of_career" uk-scroll>EXAMPLE CAREER</a></li>
                  </ul>
@@ -78,7 +78,7 @@
                </div> -->
              </li>
              <li><a href="#subj_table" uk-scroll>SUBJECT TABLE</a></li>
-             <li><a href="#q_and_a" uk-scroll>Q&A</a></li>
+             <li><a href="#q_and_a" uk-scroll>COMMENTS FROM SENIOR STUDENTS</a></li>
            </ul>
          </div>
     </nav>
@@ -93,7 +93,7 @@
     <div  class="divide_div"  id="what_is">
         <div>
             <h1 class="uk-heading-bullet content">What is Software Engineering?</h1>
-            <p class="content">Software engineering is the branch that focusing on programming, developing software systems in the service of mankind.
+            <p class="content font_size">Software engineering is the branch that focusing on programming, developing software systems in the service of mankind.
       <br>This course covers the fundamentals of software engineering, including understanding system
       requirements, effective methods of design, coding, and testing.</p>
         </div>
@@ -107,7 +107,7 @@
     <div id="how_differ">
         <div class="divide_div">
             <h1 class="uk-heading-bullet content">How different from the other two branches?</h1>
-            <p class="content">For Software Engineering, we are focusing on back-end developing and deep programming.<br>
+            <p class="content font_size">For Software Engineering, we are focusing on back-end developing and deep programming.<br>
       But for Multimedia and Game Development, students in this branch will learn about front-end development and the use of creativity.<br>
       Network and System Technology will focus on network.</p>
         </div>
@@ -117,86 +117,84 @@
   <!-- test parallax -->
 
 <!--Who is eligible for this branch?-->
-  <div class="divide_div" uk-parallax="bgy: -400" id="bg2">
-    <h1 class="white">Eligible</h1>
-    <p class="white">1. Have programming knowledge.<br>
+  <div class="divide_div" uk-parallax="bgy: -800" id="bg2" style="padding-right: 100px;">
+    <h1 class="white pad_left uk-heading-bullet content">Eligible</h1>
+    <p class="white pad_left font_size">1. Have programming knowledge.<br>
       2. Have good logic.<br>
       3. Have good mathematics knowledge.</p>
   </div>
-  <br>
 
   <!--What you need to do/to have if you are interested in this branch-->
-  <div class="divide_div" id="bg3">
-    <h1 class="white2">Less experience but interested in Software Engineering branch?</h1>
-    <p class="white2">
-    It would be easier to enter this branch if you have some experience in programming.<br>
+  <div uk-parallax="bgy: -800" id="bg3" style="padding-right: 1100px; padding-left: 40px;">
+    <h1 class="white2 uk-heading-bullet">Less experience but interested in Software Engineering branch?</h1>
+    <p class="white2 font_size" style="text-align: justify;">
+    It would be easier to enter this branch if you have some experience in programming.
 
     Here at IT faculty, we have 3 programming subjects which are Problem Solving in Information Technology,
-    Computer Programming, and Object Oriented Programming.<br> The computer language that students will learn in these subjects
-    are Python, C, and Java.<br>
+    Computer Programming, and Object Oriented Programming. The computer language that students will learn in these subjects
+    are Python, C, and Java.
 
     We also have pre-programming course for Problem Solving in Information Technology subject which you will learn about Python language.
     This would help you make decision and be more confident in yourselves.
     </p>
   </div>
-  <br>
 
   <!--Career after graduate-->
   <div id="ex_of_career">
-    <div style="padding: 50px; background-color: black;">
-    <h1 align="center" style="color: white;">Example of career after graduated</h1>
+    <div style="padding: 100px; background-color: black;">
+    <h1 style="color: white; text-align: center;">Example of career after graduated</h1>
     </div>
     <div class="uk-child-width-1-2 uk-child-width-1-3@s uk-grid-collapse uk-grid-small" uk-grid>
-      <div class="uk-text-left">
+      <div class="uk-text-center">
         <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
           <img src="pic/career/programmer.jpeg" alt="Programmer">
-          <div class="uk-transition-slide-bottom uk-position-cover uk-overlay uk-overlay-default">
-            <p class="uk-h1 uk-margin-remove" align="center">Programmer</p>
+          <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-default">
+            <p class="uk-h1 uk-margin-remove">Programmer</p>
           </div>
         </div>
       </div>
 
-      <div class="uk-text-left">
+      <div class="uk-text-center">
         <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
           <img src="pic/career/web_dev_resize.jpg" alt="Web Developer">
-          <div class="uk-transition-slide-bottom uk-position-cover uk-overlay uk-overlay-default">
-            <p class="uk-h1 uk-margin-remove" align="center">Web Developer</p>
+          <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-default">
+            <p class="uk-h1 uk-margin-remove">Web Developer</p>
           </div>
         </div>
       </div>
 
-      <div class="uk-text-left">
+      <div class="uk-text-center">
         <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
           <img src="pic/career/software_tester.jpeg" alt="Software Tester">
-          <div class="uk-transition-slide-bottom uk-position-cover uk-overlay uk-overlay-default">
-            <p class="uk-h1 uk-margin-remove" align="center">Software Tester</p>
+          <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-default">
+            <p class="uk-h1 uk-margin-remove">Software Tester</p>
           </div>
         </div>
       </div>
 
-      <div class="uk-text-left">
+      <div class="uk-text-center">
         <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
           <img src="pic/career/analysis.jpeg" alt="System Analyst">
-          <div class="uk-transition-slide-bottom uk-position-cover uk-overlay uk-overlay-default">
-            <p class="uk-h1 uk-margin-remove" align="center">System Analyst</p>
+          <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-default">
+            <p class="uk-h1 uk-margin-remove">System Analyst</p>
           </div>
         </div>
       </div>
 
-      <div class="uk-text-left">
+      <div class="uk-text-center">
         <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
           <img src="pic/career/architect.jpg" alt="Software Architect">
-          <div class="uk-transition-slide-bottom uk-position-cover uk-overlay uk-overlay-default">
-            <p class="uk-h1 uk-margin-remove" align="center">Software Architect</p>
+          <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-default">
+            <p class="uk-h1 uk-margin-remove">Software Architect</p>
           </div>
         </div>
       </div>
 
-      <div class="uk-text-left">
+      <div class="uk-text-center">
         <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
           <img src="pic/career/Manager.jpeg" alt="Project manager Assistant">
-          <div class="uk-transition-slide-bottom uk-position-cover uk-overlay uk-overlay-default">
-            <p class="uk-h1 uk-margin-remove" align="center">Project manager Assistant</p>
+          <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-default">
+            <p class="uk-h1 uk-margin-remove">Project manager Assistant</p>
           </div>
         </div>
       </div>
@@ -214,7 +212,7 @@
     <li class="uk-open">
       <a class="uk-accordion-title" href="#" id="se">SOFTWARE ENGINEERING</a>
       <div class="uk-accordion-content">
-        <p>Subject code: 06016321<br>
+        <p class="font_size">Subject code: 06016321<br>
           PREREQUISITE : 06016306 INFORMATION SYSTEMS ANALYSIS AND DESIGN<br>
           Credit: 3(3-0-6)<br>
           Introduction to software engineering; software categories and evolution;software
@@ -229,7 +227,7 @@
     <li>
       <a class="uk-accordion-title" href="#" id="wp">WEB PROGRAMMING</a>
       <div class="uk-accordion-content">
-        <p>Subject code: 06016322<br>
+        <p class="font_size">Subject code: 06016322<br>
           Prerequisite: 06016317 OBJECT-ORIENTED PROGRAMMING<br>
           Credit: 3(2-2-5)<br>
           Dynamic web pages development; HTTP protocol;web servers; server-side web
@@ -241,7 +239,7 @@
     <li>
       <a class="uk-accordion-title" href="#" id="mdp">MOBILE DEVICE PROGRAMMING</a>
       <div class="uk-accordion-content">
-        <p>
+        <p class="font_size">
           Subject code: 06016323<br>
           Prerequisite: 06016317 OBJECT-ORIENTED PROGRAMMING<br>
           Credit: 3(2-2-5)<br>
@@ -253,7 +251,7 @@
     <li>
       <a class="uk-accordion-title" href="#" id="re">REQUIREMENT ENGINEERING</a>
       <div class="uk-accordion-content">
-        <p>
+        <p class="font_size">
           Subject code: 06016324<br>
           Prerequisite: NONE<br>
           Credit: 3(3-0-6)<br>
@@ -267,7 +265,7 @@
     <li>
       <a class="uk-accordion-title" href="#" id="sop">SERVICE-ORIENTED PROGRAMMING</a>
       <div class="uk-accordion-content">
-        <p>
+        <p class="font_size">
           Subject code: 06016325<br>
           Prerequisite: NONE<br>
           Credit: 3(2-2-5)<br>
@@ -280,7 +278,7 @@
     <li>
       <a class="uk-accordion-title" href="#" id="svav">SOFTWARE VERIFICATION AND VALIDATION</a>
       <div class="uk-accordion-content">
-        <p>
+        <p class="font_size">
           Subject code: 06016326<br>
           Prerequisite: 06016306 INFORMATION SYSTEMS ANALYSISAND DESIGN<br>
           Credit: 3(3-0-6)<br>
@@ -293,7 +291,7 @@
     <li>
       <a class="uk-accordion-title" href="#" id="cbead">CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT</a>
       <div class="uk-accordion-content">
-        <p>
+        <p class="font_size">
           Subject code: 06016327<br>
           Prerequisite: 06016325 SERVICES-ORIENTED PROGRAMMING<br>
           Credit: 3(2-2-5)<br>
@@ -309,7 +307,7 @@
     <li>
       <a class="uk-accordion-title" href="#" id="sdtae">SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS</a>
       <div class="uk-accordion-content">
-        <p>
+        <p class="font_size">
           Subject code: 06016328<br>
           Prerequisite: NONE<br>
           Credit: 3(2-2-5)<br>
@@ -323,7 +321,7 @@
     <li>
       <a class="uk-accordion-title" href="#" id="pro1">PROJECT IN SOFTWARE ENGINEERING 1</a>
       <div class="uk-accordion-content">
-        <p>
+        <p class="font_size">
           Subject code: 06016329<br>
           Prerequisite: NONE<br>
           Credit: 3(0-9-0)<br>
@@ -336,7 +334,7 @@
     <li>
       <a class="uk-accordion-title" href="#" id="pro2">PROJECT IN SOFTWARE ENGINEERING 2</a>
       <div class="uk-accordion-content">
-        <p>
+        <p class="font_size">
           Subject code: 06016330<br>
           Prerequisite: 06016329 PROJECT IN SOFTWARE ENGINEERING 1<br>
           Credit: 3(0-9-0)<br>
@@ -421,31 +419,31 @@
   </div>
 
   <!--  CHAT MESSAGE -->
-  <div class="divide_div bg_color" id="q_and_a" style="padding-top: 50px;">
-    <h1>Comments from senior students</h1>
+  <div class="divide_div bg_color" id="q_and_a" style="padding-top: 100px;">
+    <h1 style="margin-bottom: 50px; text-align: center;">Comments from senior students</h1>
     <div class="container">
       <img src="pic/test.jpg" alt="Avatar">
-      <p>This branch is good. It taught me about what I think it is easy, but in fact, it needs some processes to aqquried what is called it is easy.</p>
+      <p class="font_size">This branch is good. It taught me about what I think it is easy, but in fact, it needs some processes to aqquried what is called it is easy.</p>
       <span class="time-right">Mawin</span>
     </div>
 
     <div class="container darker">
       <img src="pic/test.jpg" alt="Avatar" class="right">
-      <p>Software Engineering is subject that learn about software development mainly. Start from collect requirement to deliver the software to client.<br>
-Moreover, our faculty teaches main subjects for example requirement engineering, mobile application programming, software verification and validation and software development by using popular architecture.<br>
+      <p class="font_size" style="text-align: justify;">Software Engineering is subject that learn about software development mainly. Start from collect requirement to deliver the software to client.
+Moreover, our faculty teaches main subjects for example requirement engineering, mobile application programming, software verification and validation and software development by using popular architecture.
 Overall, this branch is full of programming course which is good for people who want to be a programmer.</p>
       <span class="time-left">Chanoknan</span>
     </div>
 
     <div class="container">
       <img src="pic/test.jpg" alt="Avatar">
-      <p>You can do everthing about programming from programming to web even networking when you graduate from software engineering branch.</p>
+      <p class="font_size">You can do everthing about programming from programming to web even networking when you graduate from software engineering branch.</p>
       <span class="time-right">Weeruhputt</span>
     </div>
 
     <div class="container darker">
       <img src="pic/test.jpg" alt="Avatar" class="right">
-      <p>Studying in software engineering will make you have skills in create production.<br>No matter if it's website or mobile application, you will do all of these efficiently because you will learn about the process of development step by step from 0 until you have a production that can be used for real and efficiently.
+      <p class="font_size" style="text-align: justify;">Studying in software engineering will make you have skills in create production. No matter if it's website or mobile application, you will do all of these efficiently because you will learn about the process of development step by step from 0 until you have a production that can be used for real and efficiently.
 Furthermore, the knowledge of the process of development can be applied to the other projects that are not relate to the computer too.</p>
       <span class="time-left">Thanawat</span>
     </div>
