real pic for comment

--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -429,13 +429,13 @@
   <div class="divide_div bg_color" id="q_and_a" style="padding-top: 100px;">
     <h1 style="margin-bottom: 50px; text-align: center;">Comments from senior students</h1>
     <div class="container">
-      <img src="pic/test.jpg" alt="Avatar">
+      <img src="pic/comment1.jpg" alt="Avatar">
       <p class="font_size">This branch is good. It taught me about what I think it is easy, but in fact, it needs some processes to aqquried what is called it is easy.</p>
       <span class="time-right">Mawin</span>
     </div>
 
     <div class="container darker">
-      <img src="pic/test.jpg" alt="Avatar" class="right">
+      <img src="pic/comment2.jpg" alt="Avatar" class="right">
       <p class="font_size" style="text-align: justify;">Software Engineering is subject that learn about software development mainly. Start from collect requirement to deliver the software to client.
 Moreover, our faculty teaches main subjects for example requirement engineering, mobile application programming, software verification and validation and software development by using popular architecture.
 Overall, this branch is full of programming course which is good for people who want to be a programmer.</p>
@@ -443,13 +443,13 @@ Overall, this branch is full of programming course which is good for people who 
     </div>
 
     <div class="container">
-      <img src="pic/test.jpg" alt="Avatar">
+      <img src="pic/comment3.jpg" alt="Avatar">
       <p class="font_size">You can do everthing about programming from programming to web even networking when you graduate from software engineering branch.</p>
       <span class="time-right">Weeruhputt</span>
     </div>
 
     <div class="container darker">
-      <img src="pic/test.jpg" alt="Avatar" class="right">
+      <img src="pic/comment4.jpg" alt="Avatar" class="right">
       <p class="font_size" style="text-align: justify;">Studying in software engineering will make you have skills in create production. No matter if it's website or mobile application, you will do all of these efficiently because you will learn about the process of development step by step from 0 until you have a production that can be used for real and efficiently.
 Furthermore, the knowledge of the process of development can be applied to the other projects that are not relate to the computer too.</p>
       <span class="time-left">Thanawat</span>
