really final push

--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Software Engineering</title>
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <link rel="stylesheet" href="css/uikit.min.css">
   <link rel="stylesheet" href="css/script.css">
   <!--<link rel="stylesheet" href="css/uikit.css">-->
@@ -17,7 +18,7 @@
   <!--Web header-->
   <div id="bg1">
     <b>
-      <h1 id="se_header">SOFTWARE ENGINEERING</h1>
+      <h1 id="se_header" class="uk-heading-hero">SOFTWARE ENGINEERING</h1>
     </b>
   </div>
 
